<resources>
    <string name="app_name">Mustang Radio</string>


    <string name="title_section1">Radio Controls</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Radio Settings</string>

    <string name="action_settings">Settings</string>

    <string name="radio_button_width">1</string>
    <string name="wide_button_width">0.2</string>
    <string name="Settings_String1">atsh2e0!</string>
    <string name="Settings_String2">atspb!</string>

    <string name="Radio1">1</string>
    <string name="Radio2">2</string>
    <string name="Radio3">3</string>
    <string name="Radio4">4</string>
    <string name="Radio5">5</string>
    <string name="Radio6">6</string>
    <string name="Radio7">7</string>
    <string name="Radio8">8</string>
    <string name="Radio9">9</string>
    <string name="Radio0">0</string>

    <string name = "button1">31</string>
    <string name = "button2">32</string>
    <string name = "button3">33</string>
    <string name = "button4">34</string>
    <string name = "button5">35</string>
    <string name = "button6">36</string>
    <string name = "button7">37</string>
    <string name = "button8">38</string>
    <string name = "button9">39</string>
    <string name = "button0">30</string>

    <string name = "buttonIO">01</string>
    <string name = "buttonOK">02</string>
    <string name = "buttonMenu">03</string>
    <string name = "buttonCat">08</string>
    <string name = "buttonClock">0f</string>
    <string name = "buttonScan">21</string>
    <string name = "buttonSeekRight">24</string>
    <string name = "buttonSeekLeft">25</string>
    <string name = "buttonTuneRight">29</string>
    <string name = "buttonTuneLeft">2A</string>
    <string name = "buttonVolRight">2b</string>
    <string name = "buttonVolLeft">2c</string>

    <string name = "buttonText">43</string>
    <string name = "buttonDirect">76</string>
    <string name = "buttonSound">77</string>
    <string name = "buttonAux">78</string>
    <string name = "buttonSirius">79</string>
    <string name = "buttonAMFM">80</string>
    <string name = "buttonCD">81</string>
    <string name = "buttonLoad">82</string>
    <string name = "buttonEject">83</string>
    <string name = "buttonPhone">84</string>
    <string name = "buttonSeekUp">86</string>
    <string name = "buttonSeekDown">87</string>
    <string name = "buttoniPhone">iPhone,</string>
    <string name = "buttonAndroid">Android,</string>

    <string name="normal_press_ending">88!</string>
    <string name="normal_release_ending">48!</string>
    <string name="odd_press_ending">84!</string>
    <string name="odd_release_ending">44!</string>

</resources>
