<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World"/>




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_below="@+id/section_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="false"
            >

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageButton"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang01"
                android:adjustViewBounds="false"
                android:contentDescription="@string/Radio1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:baselineAlignBottom="false" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton2"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:focusableInTouchMode="false"
                android:src="@drawable/mustang02"

                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/Radio2"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageButton3"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang03"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio3" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton4"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang04"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio4" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageButton5"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang05"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio5" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageButton6"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang06"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio6" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton7"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang07"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio7" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton8"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang08"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio8" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton9"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:scaleType="fitCenter"
                android:src="@drawable/mustang09"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio9" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/imageButton10"
                android:layout_gravity="center_vertical"
                android:layout_weight="@string/radio_button_width"
                android:src="@drawable/mustang10"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:contentDescription="@string/Radio0" />



    </LinearLayout>







</RelativeLayout>
